[tool.poetry]
name = "stock-board"
version = "0.1.0"
description = "The stock price dashboard using Streamlit."
authors = ["Tanny"]
license = "MIT"
readme = "README.md"
packages = [{include = "stock_board"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.17.0"
pandas-datareader = "^0.10.0"
plotly = "^5.13.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
